// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`formatter preserves aligned dots in a multiline UFCS chain 1`] = `
"module Example {
  var n: int

  action init = n' = 0
  action step = n' = n + 1

  run trace =
    init.then(step)
        .then(step)
        .then(all {
          n' = n,
          assert(n >= 0),
        })
}
"
`;

exports[`formatter formats an empty module 1`] = `
"module Example {
}
"
`;

exports[`formatter formats spacing after the module keyword 1`] = `
"module Example {
}
"
`;

exports[`formatter formats spacing before the module brace 1`] = `
"module Example {
}
"
`;

exports[`formatter formats excess final newlines 1`] = `
"module Example {
}
"
`;

exports[`formatter indents a variable declaration in a module 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats spacing after a type colon 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter removes spacing before a type colon 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats spacing after var 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats a constant declaration 1`] = `
"module Example {
  const N: int
}
"
`;

exports[`formatter formats a Set type 1`] = `
"module Example {
  const Values: Set[int]
}
"
`;

exports[`formatter formats a tuple type 1`] = `
"module Example {
  const Pair: (int, str)
}
"
`;

exports[`formatter formats a record type 1`] = `
"module Example {
  const User: { name: str, active: bool }
}
"
`;

exports[`formatter preserves comments in a record type 1`] = `
"module Example {
  type Item = {
    // Preserve this field comment.
    id: int,
  }
}
"
`;

exports[`formatter formats an empty record type 1`] = `
"module Example {
  type Empty = {}
}
"
`;

exports[`formatter formats an open record type 1`] = `
"module Example {
  const User: { name: str | r }
}
"
`;

exports[`formatter formats a function type 1`] = `
"module Example {
  const mapper: int -> str
}
"
`;

exports[`formatter formats an operator type 1`] = `
"module Example {
  const predicate: (int, str) => bool
}
"
`;

exports[`formatter formats a zero-parameter operator type 1`] = `
"module Example {
  const thunk: () => bool
}
"
`;

exports[`formatter formats a direct operator type 1`] = `
"module Example {
  const predicate: int => bool
}
"
`;

exports[`formatter formats a parenthesized type 1`] = `
"module Example {
  const values: (Set[int])
}
"
`;

exports[`formatter formats a unit type 1`] = `
"module Example {
  const empty: ()
}
"
`;

exports[`formatter places declarations on separate lines 1`] = `
"module Example {
  var a: int
  var b: int
}
"
`;

exports[`formatter formats a Boolean assumption 1`] = `
"module Example {
  assume Safe = true
}
"
`;

exports[`formatter formats spacing around assumption equals 1`] = `
"module Example {
  assume Safe = true
}
"
`;

exports[`formatter formats an integer value definition 1`] = `
"module Example {
  val answer = 42
}
"
`;

exports[`formatter removes an optional value semicolon 1`] = `
"module Example {
  val answer = 42
}
"
`;

exports[`formatter formats a Boolean value definition 1`] = `
"module Example {
  val ready = true
}
"
`;

exports[`formatter formats a string value definition 1`] = `
"module Example {
  val greeting = "hello"
}
"
`;

exports[`formatter formats a typed value definition 1`] = `
"module Example {
  val answer: int = 42
}
"
`;

exports[`formatter formats an integer addition expression 1`] = `
"module Example {
  val total = 1 + 2
}
"
`;

exports[`formatter formats an identifier value expression 1`] = `
"module Example {
  const source: int
  val copy = source
}
"
`;

exports[`formatter formats a unit literal 1`] = `
"module Example {
  val empty = ()
}
"
`;

exports[`formatter formats a list literal 1`] = `
"module Example {
  val values = [1, 2]
}
"
`;

exports[`formatter formats a tuple literal 1`] = `
"module Example {
  val pair = (1, 2)
}
"
`;

exports[`formatter formats a record literal 1`] = `
"module Example {
  val user = { name: "Alice", age: 42 }
}
"
`;

exports[`formatter formats a record spread 1`] = `
"module Example {
  val extended = { b: 2, ...{ a: 1 } }
}
"
`;

exports[`formatter preserves comments in record literals 1`] = `
"module Example {
  val state = {
    first: 1, // first value
    second: 2,
  }
}
"
`;

exports[`formatter formats a tuple destructuring pattern 1`] = `
"module Example {
  pure val (first, _) = (1, 2)
}
"
`;

exports[`formatter preserves comments in a tuple destructuring pattern 1`] = `
"module Example {
  pure val first = ((
    // Preserve this tuple field comment.
    x,
    y
  )) => x
}
"
`;

exports[`formatter formats a record destructuring pattern 1`] = `
"module Example {
  pure val { first, second } = { first: 1, second: 2 }
}
"
`;

exports[`formatter formats a call expression 1`] = `
"module Example {
  val values = Set(1, 2)
}
"
`;

exports[`formatter preserves a comment before a call argument 1`] = `
"module Example {
  val result = Set(
    // Preserve this call argument comment.
    1
  )
}
"
`;

exports[`formatter formats a UFCS call expression 1`] = `
"module Example {
  val count = Set(1).size()
}
"
`;

exports[`formatter formats an index expression 1`] = `
"module Example {
  val first = List(1, 2)[0]
}
"
`;

exports[`formatter formats a field-access expression 1`] = `
"module Example {
  val answer = { value: 1 }.value
}
"
`;

exports[`formatter preserves a comment before a field selector 1`] = `
"module Example {
  pure val source = { field: 1 }
  pure val answer = source
  // Preserve this chain comment.
  .field
}
"
`;

exports[`formatter formats a unary expression 1`] = `
"module Example {
  val negative = -42
}
"
`;

exports[`formatter formats every binary operator 1`] = `
"module Example {
  pure val pair = 1 -> 2

  pure val implication = true implies false

  temporal response = true leadsTo false

  pure val equivalence = true iff false

  pure val disjunction = true or false

  pure val conjunction = true and false

  pure val equal = 1 == 1

  pure val unequal = 1 != 2

  pure val less = 1 < 2

  pure val lessOrEqual = 1 <= 2

  pure val greater = 2 > 1

  pure val greaterOrEqual = 2 >= 1

  pure val sum = 1 + 2

  pure val delta = 2 - 1

  pure val product = 2 * 3

  pure val quotient = 6 / 2

  pure val remainder = 7 % 3

  pure val power = 2 ^ 3
}
"
`;

exports[`formatter formats lambda parameter forms 1`] = `
"module Example {
  pure val identity = x => x

  pure val add = (x, y) => x + y

  pure val sumPair = ((x, y)) => x + y
}
"
`;

exports[`formatter preserves a multiline call with a lambda argument 1`] = `
"module Example {
  const names: Set[str]

  val all_present = names.forall(name =>
    names.contains(name)
  )
}
"
`;

exports[`formatter preserves a comment before a lambda body 1`] = `
"module Example {
  pure val increment = (value =>
    // Preserve this lambda comment.
    value + 1)
}
"
`;

exports[`formatter formats a conditional expression 1`] = `
"module Example {
  pure val answer = if (true) 1 else 2
}
"
`;

exports[`formatter places a block-bodied conditional below a definition header 1`] = `
"module Example {
  var ready: bool
  var n: int

  action step =
    if (ready) {
      n' = n
    } else {
      n' = n + 1
    }
}
"
`;

exports[`formatter preserves a comment before a conditional alternative 1`] = `
"module Example {
  pure val answer = if (true) 1 else
    // Preserve this alternative comment.
    2
}
"
`;

exports[`formatter preserves a comment before a conditional consequence 1`] = `
"module Example {
  pure val answer = if (true)
    // Preserve this consequence comment.
    1 else 2
}
"
`;

exports[`formatter formats a match expression 1`] = `
"module Example {
  type Option = Some(int) | None

  pure def getOrZero(value: Option): int =
    match value {
      | Some(x) => x
      | None => 0
      | _ => 0
    }
}
"
`;

exports[`formatter places a match expression below a definition header 1`] = `
"module Example {
  type Status = Ready | Waiting
  var status: Status

  action step =
    match status {
      | Ready => {
          status' = Waiting
        }
      | Waiting => {
          status' = Ready
        }
    }
}
"
`;

exports[`formatter indents multiline match-arm bodies below their arms 1`] = `
[
  {
    "column": 1,
    "filePath": "match-arm-block-indentation.qnt",
    "length": 8,
    "line": 9,
    "message": "expected the nested match-arm body to be indented one level",
    "rule": "format/match-arm-body-indentation",
    "sourceLine": "        n' = n,",
  },
  {
    "column": 1,
    "filePath": "match-arm-block-indentation.qnt",
    "length": 8,
    "line": 13,
    "message": "expected the nested match-arm body to be indented one level",
    "rule": "format/match-arm-body-indentation",
    "sourceLine": "        n' = n + 1,",
  },
]
`;

exports[`formatter indents multiline match-arm bodies below their arms 2`] = `
"module Example {
  type Status = Ready | Waiting
  var status: Status
  var n: int

  action step =
    match status {
      | Ready => all {
          n' = n,
          status' = Waiting,
        }
      | Waiting => all {
          n' = n + 1,
          status' = Ready,
        }
    }
}
"
`;

exports[`formatter preserves comments between match arms 1`] = `
"module Example {
  type Step = First | Second
  pure def value(step) =
    match step {
      // Preserve this arm comment.
      | First => 1
      | Second => 2
    }
}
"
`;

exports[`formatter preserves a comment before a match-arm body 1`] = `
"module Example {
  type Step = First | Second
  pure def value(step) =
    match step {
      | First =>
        // Preserve this arm body comment.
        1
      | Second => 2
    }
}
"
`;

exports[`formatter preserves a multiline match-arm body with a trailing comment 1`] = `
"module Example {
  type Status = Ready | Waiting
  var status: Status

  val number =
    match status {
      | Ready =>
          1 // Ready has a value
      | Waiting => 0
    }
}
"
`;

exports[`formatter formats namespace access 1`] = `
"module Example {
  pure val apply = (Scope::x) => Scope::x
}
"
`;

exports[`formatter formats a primed assignment 1`] = `
"module Example {
  var count: int

  action increment = count' = count + 1
}
"
`;

exports[`formatter formats an ordinary block expression 1`] = `
"module Example {
  var count: int

  action initialize = {
    count' = 0
  }
}
"
`;

exports[`formatter preserves a comment inside an ordinary block 1`] = `
"module Example {
  action step = {
    // Preserve this block comment.
    true
  }
}
"
`;

exports[`formatter formats all block combinators 1`] = `
"module Example {
  var count: int

  action choose = any {
    count' = 1,
    count' = 2,
  }

  action advance = all {
    count >= 0,
    count' = count + 1,
  }

  pure val both = and {
    true,
    false,
  }

  pure val either = or {
    false,
    true,
  }
}
"
`;

exports[`formatter preserves a block combinator below a definition header 1`] = `
"module Example {
  var n: int

  action step =
    all {
      n' = n,
      n >= 0,
    }
}
"
`;

exports[`formatter preserves a comment inside a block combinator 1`] = `
"module Example {
  action step = all {
    // Preserve this conjunct comment.
    true,
  }
}
"
`;

exports[`formatter preserves aligned trailing comments in a block combinator 1`] = `
"module Example {
  var first: int
  var second: int
  var third: int
  var fourth: int

  action init = all {
    first' = 1,  // First value
    second' = 2, // Second value
    third' = 3,  // Third value
    fourth' = 4,  // Fourth value
  }
}
"
`;

exports[`formatter formats a nondeterministic binding 1`] = `
"module Example {
  var count: int

  action step = {
    nondet choice = Set(1, 2).oneOf()
    count' = choice
  }
}
"
`;

exports[`formatter formats nested definitions 1`] = `
"module Example {
  pure def calculate(value: int): int = {
    pure val doubled: int = value * 2
    pure def increment(number: int): int = number + 1
    increment(doubled)
  }
}
"
`;

exports[`formatter preserves a nested definition below an action header 1`] = `
"module Example {
  var n: int

  action step =
    nondet value = Set(1, 2, 3).oneOf()
    all {
      n' = value,
      value > 0,
    }
}
"
`;

exports[`formatter preserves a comment after a nested definition 1`] = `
"module Example {
  action step = {
    val answer = 42
    // Preserve this comment.
    answer
  }
}
"
`;

exports[`formatter preserves a trailing comment on a local definition 1`] = `
"module Example {
  action step = {
    val answer = 42 // Preserve this local comment.
    answer
  }
}
"
`;

exports[`formatter preserves a comment before a local definition body 1`] = `
"module Example {
  action step = {
    val answer =
      // Preserve this local body comment.
      42
    answer
  }
}
"
`;

exports[`formatter formats named and wildcard imports and exports 1`] = `
"module Library {
  pure val value = 1
}

module Consumer {
  import Library
  import Library as Lib
  import Library.value
  import Library.*
  export Library
  export Library as Public
  export Library.value
  export Library.*
}
"
`;

exports[`formatter formats source-qualified imports 1`] = `
"module Example {
  import Library from "./quint-format-source-library"
  import Library.value from "./quint-format-source-library"
  import Library.* from "./quint-format-source-library"
}
"
`;

exports[`formatter formats module instances and overrides 1`] = `
"module Library {
  const N: int
  const Flag: bool
}

module Example {
  import Library(N = 1, Flag = true) as Lib
}
"
`;

exports[`formatter preserves comments among module instance overrides 1`] = `
"module Library {
  const N: int
}

module Example {
  import Library(
    // Preserve this override comment.
    N = 1
  ) as Lib
}
"
`;

exports[`formatter formats anonymous instances 1`] = `
"module Library {
  const N: int
}

module Example {
  import Library(N = 1).*
}
"
`;

exports[`formatter preserves comments in anonymous instance overrides 1`] = `
"module Library {
  const N: int
}

module Example {
  import Library(
    // Preserve this anonymous override comment.
    N = 1
  ).*
}
"
`;

exports[`formatter formats a parenthesized expression 1`] = `
"module Example {
  val total = (1 + 2)
}
"
`;

exports[`formatter formats an integer subtraction expression 1`] = `
"module Example {
  val delta = 3 - 1
}
"
`;

exports[`formatter preserves a source hashbang 1`] = `
"#!/usr/bin/env -S quint typecheck
module Example {
}
"
`;

exports[`formatter formats multiple top-level modules 1`] = `
"module First {
}

module Second {
}
"
`;

exports[`formatter preserves adjacent definitions 1`] = `
"module Example {
  var first: int
  var second: int
}
"
`;

exports[`formatter preserves a blank line between grouped definitions 1`] = `
"module Example {
  var first: int

  var second: int
}
"
`;

exports[`formatter preserves a leading line comment 1`] = `
"module Example {
  // The answer
  val answer = 42
}
"
`;

exports[`formatter preserves a definition documentation comment 1`] = `
"module Example {
  /// The answer
  val answer = 42
}
"
`;

exports[`formatter preserves a leading single-line block comment 1`] = `
"module Example {
  /* The answer */
  val answer = 42
}
"
`;

exports[`formatter indents a leading multiline block comment 1`] = `
"module Example {
  /*
   * The answer
   */
  val answer = 42
}
"
`;

exports[`formatter preserves a module documentation comment 1`] = `
"/// Module documentation
module Example {
}
"
`;

exports[`formatter preserves a trailing line comment 1`] = `
"module Example {
  val answer = 42 // The answer
}
"
`;

exports[`formatter preserves a trailing module-body comment 1`] = `
"module Example {
  pure val answer = 42
  // Kept for future work
}
"
`;

exports[`formatter preserves trailing source comments 1`] = `
"module Example {
}

/*! answer !*/

/*! 1 + 1 !*/
"
`;

exports[`formatter preserves a comment inside an otherwise empty module 1`] = `
"module Example {
  // Intentionally empty
}
"
`;

exports[`formatter preserves an inline block comment 1`] = `
"module Example {
  val total = 1 /* left */ + 2
}
"
`;

exports[`formatter preserves a comment before a binary right operand 1`] = `
"module Example {
  pure val answer = true and
    // Preserve this right operand comment.
    false
}
"
`;

exports[`formatter formats a general assumption expression 1`] = `
"module Example {
  const Flag: bool

  assume Holds = Flag
}
"
`;

exports[`formatter formats a parameterless def definition 1`] = `
"module Example {
  def answer = 42
}
"
`;

exports[`formatter formats a def parameter 1`] = `
"module Example {
  def identity(value) = value
}
"
`;

exports[`formatter formats an ignored def parameter 1`] = `
"module Example {
  pure def ignore(_: int): int = 0
}
"
`;

exports[`formatter formats multiple def parameters 1`] = `
"module Example {
  def choose(left, right) = left
}
"
`;

exports[`formatter formats a typed def header 1`] = `
"module Example {
  def identity(value: int): int = value
}
"
`;

exports[`formatter formats an untyped parameter with a return type 1`] = `
"module Example {
  def identity(value): int = value
}
"
`;

exports[`formatter formats List types in a def header 1`] = `
"module Example {
  def identity(xs: List[int]): List[int] = xs
}
"
`;

exports[`formatter removes an optional definition semicolon 1`] = `
"module Example {
  def answer = 42
}
"
`;

exports[`formatter formats a primitive type alias 1`] = `
"module Example {
  type Count = int
}
"
`;

exports[`formatter formats an uninterpreted type 1`] = `
"module Example {
  type DOMAIN
}
"
`;

exports[`formatter formats a named type alias 1`] = `
"module Example {
  type DOMAIN

  type Copy = DOMAIN
}
"
`;

exports[`formatter formats a polymorphic type alias 1`] = `
"module Example {
  type Box[a] = List[a]
}
"
`;

exports[`formatter formats a polymorphic type application 1`] = `
"module Example {
  type Box[a] = List[a]

  const boxes: Box[int]
}
"
`;

exports[`formatter formats an inline sum type 1`] = `
"module Example {
  type Elem = S(str) | I(int)
}
"
`;

exports[`formatter formats a multiline sum type 1`] = `
"module Example {
  type Option[a] =
    | Some(a)
    | None
}
"
`;

exports[`formatter preserves comments between sum-type variants 1`] = `
"module Example {
  type Step =
    | First
    // Preserve this variant comment.
    | Second
}
"
`;

exports[`formatter preserves trailing comments on sum-type variants 1`] = `
"module Example {
  type LastDraw =
    | Self(str) // The name of someone who drew themself
    | Ok        // The draw was Ok
}
"
`;

exports[`formatter formats a pure definition 1`] = `
"module Example {
  pure def answer = 42
}
"
`;

exports[`formatter formats a pure value definition 1`] = `
"module Example {
  pure val answer = 42
}
"
`;

exports[`formatter formats a parameterless action 1`] = `
"module Example {
  action initialize = true
}
"
`;

exports[`formatter preserves a comment before a definition body 1`] = `
"module Example {
  action init =
    // Preserve this body comment.
    true
}
"
`;

exports[`formatter formats a parameterless run 1`] = `
"module Example {
  run scenario = true
}
"
`;

exports[`formatter formats a parameterless temporal definition 1`] = `
"module Example {
  temporal invariant = true
}
"
`;

exports[`formatter formats a parameterless nondet definition 1`] = `
"module Example {
  nondet selection = true
}
"
`;

exports[`formatter formats empty parameter lists across definition modes 1`] = `
"module Example {
  action step(): bool = true
  run scenario(): bool = true
  temporal property(): bool = true
  nondet choose(): int = 1
}
"
`;

exports[`formatter formats rich definitions and types across every mode 1`] = `
"module Matrix {
  type Pair[a, b] = (a, b)
  type Callback[a, b] = (a) => b
  var n: int
  pure def identity(value: List[Set[int]]): List[Set[int]] = value
  pure def apply(value: int, callback: (int) => str): str = callback(value)
  def stateValue(offset: int): int = n + offset
  action advance(amount: int): bool = all {
    amount > 0,
    n' = n + amount,
  }
  run scenario(start: int): bool = (n' = start).then(n' = start + 1)
  temporal positive(limit: int): bool = always(n >= limit)
  nondet choose(values: Set[int]): int = values.oneOf()
}
"
`;

exports[`formatter preserves blank lines between leading comment groups 1`] = `
"module Example {
  val source = 1

  // First disabled example
  // val first = source

  // Second disabled example
  // val second = source

  def update(value) = value
}
"
`;

exports[`formatter preserves an explicit line break after definition equals 1`] = `
"module Example {
  temporal eventuallyTrue =
    eventually(true)
}
"
`;
